Added maths and shake layout pages

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    task wrapper(type: Wrapper){
+        gradleVersion = '7.2'
+    }
+    task prepareKotlinBuildScriptModel {
+
+    }
 }
 
 dependencies {
